--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-209.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-417.0KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
-  - {name: 🇨🇳 中国-297.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-420.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-751.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-417.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-5.75MB/s(Youtube:不良林), server: 185.172.113.243, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.85MB/s(Youtube:不良林), server: 5.183.176.93, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.64MB/s(Youtube:不良林), server: 5.183.176.96, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.32MB/s(Youtube:不良林), server: 5.183.176.96, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
+  - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.91MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-209.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-297.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-751.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-417.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.85MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
