--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.61MB/s(Youtube:不良林), server: 89.31.126.147, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-5.83MB/s(Youtube:不良林), server: 5.183.176.84, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 5.183.176.81, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-4.66MB/s(Youtube:不良林), server: 5.183.176.93, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.48MB/s(Youtube:不良林), server: 5.183.176.93, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: 5.183.176.96, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-12.14MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.17MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 89.31.126.171, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
   - {name: 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
   - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.91MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-332.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
